--- a/1-introduction.ipynb
+++ b/1-introduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "29c98e8e-df0a-4452-8006-d483bbe8c528",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bfc79d94-86f6-4ac1-8dbb-8020739506e7",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b5a1ddd1-0644-4c4f-afa0-e05f51b5dd8e",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "edee62a3-a972-4e7a-a641-c2aa02e9b417",
    "metadata": {},
    "outputs": [],
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "b66a554b-04c7-48c9-be2e-87750a3db939",
    "metadata": {},
    "outputs": [],
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "97ab061d-2dd4-45df-be50-6c571dff463d",
    "metadata": {},
    "outputs": [],
@@ -162,6 +162,7 @@
     "        self.desired_position = desired_position\n",
     "\n",
     "    def step(self, t, input):\n",
+    "        return QuadrotorState(position=desired_position)\n",
     "        # This is for you to implement!\n",
     "        # Return a QuadrotorState object (see the quadrotor/dynamics.py) with\n",
     "        # the position set to the class variable 'desired_position'\n",
@@ -183,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "918c635e-62c2-40c9-90a8-8ae8404b4f01",
    "metadata": {},
    "outputs": [],
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "e5f427f8-a5cb-450c-b1c7-089f00c009f3",
    "metadata": {},
    "outputs": [],
@@ -225,10 +226,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "9207ff9a-4b40-4460-8fd3-1513625eb4a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/maryamchoudhury/.local/share/virtualenvs/oa-project-08-24-RgAkkMD-/lib/python3.12/site-packages/traittypes/traittypes.py:97: UserWarning: Given trait value dtype \"float64\" does not match required type \"float32\". A coerced copy has been created.\n",
+      "  warnings.warn(\n",
+      "/Users/maryamchoudhury/.local/share/virtualenvs/oa-project-08-24-RgAkkMD-/lib/python3.12/site-packages/traittypes/traittypes.py:97: UserWarning: Given trait value dtype \"int64\" does not match required type \"float32\". A coerced copy has been created.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "dbfd3442a3dd4c46b68831d40452f0c5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# This might be slow to run the first try!\n",
     "from quadrotor.renderer import animate_k3d\n",
@@ -239,6 +265,14 @@
     "plot.display()\n",
     "plot.start_auto_play()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b56db076-1679-44e0-9e6c-9a77b59498f8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -257,7 +291,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.5"
   }
  },
  "nbformat": 4,
