--- a/2-Planar-Quadrotor.ipynb
+++ b/2-Planar-Quadrotor.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "id": "979e816b-7fd5-4ab0-bbf9-68d63d15c1d0",
    "metadata": {},
    "outputs": [],
@@ -106,6 +106,7 @@
     "    # Universal constants\n",
     "    g: float = 9.80665  # [m/s2] Gravity\n",
     "    rho: float = 1.225  # [kg/m3] Sea-level density\n",
+    "    inertia = 0.1\n",
     "\n",
     "\n",
     "# Simply treat as a global\n",
@@ -129,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "id": "5992a5d3-4711-4ef5-a9bc-6fd3cfabed10",
    "metadata": {},
    "outputs": [],
@@ -173,7 +174,7 @@
     "        #raise NotImplementedError(\"Use the scipy function solve_ivp to integrate to the next timestep\")\n",
     "\n",
     "        solution = sp.integrate.solve_ivp(\n",
-    "        fun=state_derivative, t_span=(0, t), y0=state_vector, method='RK45')  # NOTE(roy) solution = sp.integrate.solve_ivp(....\n",
+    "        fun=state_derivative, t_span=(0, self.dt), y0=state_vector, method='RK45')  # NOTE(roy) solution = sp.integrate.solve_ivp(....\n",
     "        #Where in the slides do we talk about how to derive this solution?\n",
     "\n",
     "        self.state = QuadrotorState.from_state_vector(solution['y'][:, -1])\n",
@@ -191,8 +192,7 @@
     "            \n",
     "        u1 * np.cos(state.orientation.to_yaw_pitch_roll()[0]) - p.mass * p.g  # z direction\n",
     "    ]) / p.mass\n",
-    "        angular_accel = np.array([0.0, u2 / (p.mass * p.arm_length ** 2), 0.0])\n",
-    "\n",
+    "        angular_accel = np.array([0.0, u2 / p.inertia, 0.0])\n",
     "        # NOTE(roy) this might look a little confusing at first glance, but we're populating DERIVATIVES\n",
     "        # of the state here! So position -> velocity, velocity -> acceleration, etc...\n",
     "        # If you can think of a more readable way to do this (e.g. defining a QuadrotorStateDerivative class)\n",
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "id": "fdfb7d18-cc55-49ce-874f-852525c8a8a7",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "id": "10652209-5106-4a73-8f1e-463b42754f10",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 71,
    "id": "d31b24c5-3603-451d-bf4c-c3565b8573ce",
    "metadata": {},
    "outputs": [],
@@ -265,22 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 67,
    "id": "03051909-87b1-42d1-ba99-27190b8bf041",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/maryamchoudhury/.local/share/virtualenvs/oa-project-08-24-RgAkkMD-/lib/python3.12/site-packages/traittypes/traittypes.py:97: UserWarning: Given trait value dtype \"float64\" does not match required type \"float32\". A coerced copy has been created.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "181c2e7e2d8e4857b96d4fb88b9c0e9f",
+       "model_id": "221f6467063e4a7cb1073cfd6a414322",
        "version_major": 2,
        "version_minor": 0
       },
@@ -325,6 +317,18 @@
    "metadata": {},
    "source": [
     "### Commit your updated notebook to your fork!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b74420d7-2ace-4322-9e4e-3b31e4dbab86",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Questions for Roy: \n",
+    "# - going thru code step by step to understand the math\n",
+    "# - committing my updated notebook to the fork"
    ]
   }
  ],
