current versions of files 2-4

--- a/2-Planar-Quadrotor.ipynb
+++ b/2-Planar-Quadrotor.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 4,
    "id": "979e816b-7fd5-4ab0-bbf9-68d63d15c1d0",
    "metadata": {},
    "outputs": [],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "id": "5992a5d3-4711-4ef5-a9bc-6fd3cfabed10",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "id": "fdfb7d18-cc55-49ce-874f-852525c8a8a7",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "id": "10652209-5106-4a73-8f1e-463b42754f10",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "id": "d31b24c5-3603-451d-bf4c-c3565b8573ce",
    "metadata": {},
    "outputs": [],
@@ -265,14 +265,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "03051909-87b1-42d1-ba99-27190b8bf041",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/maryamchoudhury/.local/share/virtualenvs/oa-project-08-24-RgAkkMD-/lib/python3.12/site-packages/traittypes/traittypes.py:97: UserWarning: Given trait value dtype \"float64\" does not match required type \"float32\". A coerced copy has been created.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "221f6467063e4a7cb1073cfd6a414322",
+       "model_id": "ad24a573684b442c853db7ca645fb1f9",
        "version_major": 2,
        "version_minor": 0
       },
