--- a/3 - Reworking.ipynb
+++ b/3 - Reworking.ipynb
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "311ea81c-5937-47e6-a1dd-8ea1f4da69dd",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "a3381c4b-81c1-44b5-9af1-5d26d1a17974",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "id": "773cc01e-3bc4-4827-aa9c-8f0cec935d34",
    "metadata": {},
    "outputs": [],
@@ -250,14 +250,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "154e3f05-07da-4f56-ada4-c66156b927a9",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/maryamchoudhury/.local/share/virtualenvs/oa-project-08-24-RgAkkMD-/lib/python3.12/site-packages/traittypes/traittypes.py:97: UserWarning: Given trait value dtype \"float64\" does not match required type \"float32\". A coerced copy has been created.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba769f5260e145d9aa4415135001d8ab",
+       "model_id": "96c8806f62924848a3338003d04faca1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -285,6 +293,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "53082a76-9c78-487b-85c7-dea6dcf5a8bf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff10cbc2-2e8b-4539-a52a-89b775decf62",
    "metadata": {},
    "outputs": [],
    "source": []
