--- a/5-Controller-Full.ipynb
+++ b/5-Controller-Full.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "id": "2e2d9694-0169-4b4e-8234-d287f5737115",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 2,
    "id": "b2cdc081-ec7f-4628-b878-cb8de4e9660d",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 3,
    "id": "0610fe28-f931-4810-9e95-543ceed1844c",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "e3fb020e-cedc-43c7-8702-7c5b53b8e3eb",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "id": "c5eaf6e3-647e-4d34-9708-b23e93d24a25",
    "metadata": {},
    "outputs": [],
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 6,
    "id": "18f7f265-951c-4df8-84de-327587df84e5",
    "metadata": {},
    "outputs": [],
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "id": "2e3538de-d020-47bc-a028-0f2a104f7b39",
    "metadata": {},
    "outputs": [],
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "id": "128e7c3e-3b65-44dd-bea7-3c0a48184e20",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "id": "4c71f459-6106-4d8c-89dd-df93eba630ad",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 10,
    "id": "876309da-841b-4357-99b5-0f8e37e35e70",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "id": "45e8c4f7-c031-4824-a8d6-bf6b6b7a0e10",
    "metadata": {},
    "outputs": [
@@ -327,10 +327,10 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[66], line 18\u001b[0m\n\u001b[1;32m     13\u001b[0m controller_p\u001b[38;5;241m.\u001b[39mKa_d \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdiag([\u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m10\u001b[39m])\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Run the simulation for 10 seconds\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#run_and_render(initial_state, t_total=10.0)\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m \u001b[43mrun_and_render_smooth\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt_total\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10.0\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[65], line 21\u001b[0m, in \u001b[0;36mrun_and_render_smooth\u001b[0;34m(initial_state, t_total)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun_and_render_smooth\u001b[39m(initial_state: QuadrotorState, t_total: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2.0\u001b[39m):\n\u001b[1;32m     12\u001b[0m     sim \u001b[38;5;241m=\u001b[39m SimulatorBase(\n\u001b[1;32m     13\u001b[0m         dt\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.005\u001b[39m,\n\u001b[1;32m     14\u001b[0m         dynamics\u001b[38;5;241m=\u001b[39mFullQuadrotorDynamics(),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     18\u001b[0m         t_total\u001b[38;5;241m=\u001b[39mt_total,\n\u001b[1;32m     19\u001b[0m     )\n\u001b[0;32m---> 21\u001b[0m     output \u001b[38;5;241m=\u001b[39m \u001b[43msim\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimulate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m     plot \u001b[38;5;241m=\u001b[39m animate_k3d(output)\n\u001b[1;32m     24\u001b[0m     plot\u001b[38;5;241m.\u001b[39mdisplay()\n",
+      "Cell \u001b[0;32mIn[11], line 18\u001b[0m\n\u001b[1;32m     13\u001b[0m controller_p\u001b[38;5;241m.\u001b[39mKa_d \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mdiag([\u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m30\u001b[39m, \u001b[38;5;241m10\u001b[39m])\n\u001b[1;32m     16\u001b[0m \u001b[38;5;66;03m# Run the simulation for 10 seconds\u001b[39;00m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;66;03m#run_and_render(initial_state, t_total=10.0)\u001b[39;00m\n\u001b[0;32m---> 18\u001b[0m \u001b[43mrun_and_render_smooth\u001b[49m\u001b[43m(\u001b[49m\u001b[43minitial_state\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt_total\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;241;43m10.0\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[10], line 21\u001b[0m, in \u001b[0;36mrun_and_render_smooth\u001b[0;34m(initial_state, t_total)\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrun_and_render_smooth\u001b[39m(initial_state: QuadrotorState, t_total: \u001b[38;5;28mint\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2.0\u001b[39m):\n\u001b[1;32m     12\u001b[0m     sim \u001b[38;5;241m=\u001b[39m SimulatorBase(\n\u001b[1;32m     13\u001b[0m         dt\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0.005\u001b[39m,\n\u001b[1;32m     14\u001b[0m         dynamics\u001b[38;5;241m=\u001b[39mFullQuadrotorDynamics(),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     18\u001b[0m         t_total\u001b[38;5;241m=\u001b[39mt_total,\n\u001b[1;32m     19\u001b[0m     )\n\u001b[0;32m---> 21\u001b[0m     output \u001b[38;5;241m=\u001b[39m \u001b[43msim\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msimulate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     22\u001b[0m     plot \u001b[38;5;241m=\u001b[39m animate_k3d(output)\n\u001b[1;32m     24\u001b[0m     plot\u001b[38;5;241m.\u001b[39mdisplay()\n",
       "File \u001b[0;32m~/Desktop/oa-project-08-24/quadrotor/simulator.py:60\u001b[0m, in \u001b[0;36mSimulatorBase.simulate\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m t \u001b[38;5;241m<\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mt_total:\n\u001b[1;32m     59\u001b[0m     trajectory \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtrajectory\u001b[38;5;241m.\u001b[39meval(t)\n\u001b[0;32m---> 60\u001b[0m     command \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcontroller\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstep\u001b[49m\u001b[43m(\u001b[49m\u001b[43mt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtrajectory\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstate\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     61\u001b[0m     state \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mdynamics\u001b[38;5;241m.\u001b[39mstep(t, command)\n\u001b[1;32m     63\u001b[0m     output\u001b[38;5;241m.\u001b[39mappend(SimulatorState(t, state, command, trajectory))\n",
-      "Cell \u001b[0;32mIn[62], line 41\u001b[0m, in \u001b[0;36mController.step\u001b[0;34m(self, t, trajectory, state)\u001b[0m\n\u001b[1;32m     38\u001b[0m u2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mKa_p \u001b[38;5;241m@\u001b[39m orientation_error_vec \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mKa_d \u001b[38;5;241m@\u001b[39m angular_velocity_error\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# Pack the control commands (fix: pass positional arguments u1 and u2)\u001b[39;00m\n\u001b[0;32m---> 41\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mQuadrotorCommands\u001b[49m\u001b[43m(\u001b[49m\u001b[43mu1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu2\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[7], line 42\u001b[0m, in \u001b[0;36mController.step\u001b[0;34m(self, t, trajectory, state)\u001b[0m\n\u001b[1;32m     38\u001b[0m u2 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mKa_p \u001b[38;5;241m@\u001b[39m orientation_error_vec \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mparams\u001b[38;5;241m.\u001b[39mKa_d \u001b[38;5;241m@\u001b[39m angular_velocity_error\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# Pack the control commands (fix: pass positional arguments u1 and u2)\u001b[39;00m\n\u001b[1;32m     41\u001b[0m \u001b[38;5;66;03m#Now I am getting an error RE I have -1 positional args than I need...idk why this would be\u001b[39;00m\n\u001b[0;32m---> 42\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mQuadrotorCommands\u001b[49m\u001b[43m(\u001b[49m\u001b[43mu1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mu2\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[0;31mTypeError\u001b[0m: QuadrotorCommands.__init__() takes 2 positional arguments but 3 were given"
      ]
     }
